--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     </head>
     <body>
         <div>
-          <a href="/basic/index.html">basic</a>
+          <a href="./basic/index.html">basic</a>
         </div>
     </body>
 </html>
