--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
     <head>
     </head>
     <body>
+        <img src="http://www.afpy.org/_public/images/logo_afpy.png"></img>
         <div>
-          <a href="./basic/index.html">basic</a>
+          <a href="./basic/index.html">Introduction à python</a>
         </div>
     </body>
 </html>
